[package]
name = "corgi"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "corgi"
path = "./src/main.rs"
required-features = ["cli"]

[dependencies]
gumdrop = "0.8.0"
pathos = "0.3.0-pre.3"

[features]
default = ["cli"]
cli = []
