[package]
name = "corgi"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "corgi"
path = "./src/main.rs"
required-features = ["cli"]

[dependencies]
anyhow = "1.0.41"
cargo_metadata = "0.13.1"
gumdrop = "0.8.0"
indexmap = { version = "1.6.2", features = ["serde"] }
pathos = "0.3.0-pre.4"
semver = { version = "1.0.3", features = ["serde"] }
serde = { version = "1.0.126", features = ["derive"] }
toml = "0.5.8"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"

[features]
default = ["cli"]
cli = []
